--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/jpope19/chatty-the-chatbot#readme",
   "dependencies": {
-    "@slack/client": "^3.9.0"
+    "@slack/client": "^3.9.0",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
+    "stream": "0.0.2"
   }
 }
