--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@slack/client": "^3.9.0",
     "fs": "0.0.1-security",
-    "https": "^1.0.0",
-    "stream": "0.0.2"
+    "request": "^2.81.0"
   }
 }
